[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy/FBI_Beach_Squad.png" type="Texture" id=2]
[ext_resource path="res://audio/sound_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://enemy/FBI_Beach_Squad_Down.png" type="Texture" id=6]
[ext_resource path="res://BlinkPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://blink_mat.tres" type="Material" id=8]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape2D" id=9]
height = 9.228

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[node name="Enemy" type="RigidBody2D"]
collision_layer = 16
collision_mask = 33
mode = 2
physics_material_override = SubResource( 1 )
contacts_reported = 4
script = ExtResource( 1 )

[node name="Shape1" type="CollisionShape2D" parent="."]
position = Vector2( -0.125, 1.875 )
shape = SubResource( 9 )

[node name="Enabler" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 8.12845, 5.36926 )
scale = Vector2( 11.7528, 5.43145 )
pause_particles = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 8 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
hframes = 5

[node name="BulletShoot" type="Position2D" parent="Sprite"]
position = Vector2( 16.1805, -2.71568 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.852526 )
scale = Vector2( -1, 1 )
texture = ExtResource( 6 )

[node name="RaycastGun" type="RayCast2D" parent="."]
position = Vector2( 0, -2.834 )
rotation = 3.14159
scale = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 4

[node name="RaycastLeft" type="RayCast2D" parent="."]
position = Vector2( -14, -4.672 )
enabled = true
cast_to = Vector2( 0, 22.5 )

[node name="RaycastRight" type="RayCast2D" parent="."]
position = Vector2( 11, -4.672 )
enabled = true
cast_to = Vector2( 0, 22.5 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ShotDelay" type="Timer" parent="."]
one_shot = true

[node name="react" type="Timer" parent="."]
one_shot = true

[node name="BlinkPlayer" parent="." instance=ExtResource( 7 )]

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true
